default/objects/Contact/fields/OPT_IN__c.field-meta.xml
<CustomField>
    <fullName>OPT_IN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>"Möchten Sie von FleetCor über Neuheiten,
            Angebote und Wissenswertes rund um ihre
            Tankkarte per E-Mail Informiert werden?"</description>
    <inlineHelpText>"Möchten Sie von FleetCor über Neuheiten,
            Angebote und Wissenswertes rund um ihre
            Tankkarte per E-Mail Informiert werden?"</inlineHelpText>
    <label>Marketing activities Opt-in</label>
    <type>Checkbox</type>
</CustomField>