default/objects/Contact/fields/OtherPhone_Rating__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone_Rating__c</fullName>
    <description>Rating of OtherPhone field</description>
    <label>OtherPhone Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>