default/objects/Contact/fields/OtherPhone_Status__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone_Status__c</fullName>
    <description>Status for the "OtherPhone" field</description>
    <label>Other Phone Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneStatus</valueSetName>
    </valueSet>
</CustomField>