default/objects/Contact/fields/OtherPhone_StatusModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone_StatusModifiedDate__c</fullName>
    <description>Last Modified Date for OtherPhone_Status__c field</description>
    <label>Other Phone Status Modified Date</label>
    <type>DateTime</type>
</CustomField>