default/objects/Contact/fields/Passwort__c.field-meta.xml
<CustomField>
    <fullName>Passwort__c</fullName>
    <label>Passwort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>