default/objects/Contact/fields/PD_Avaliable_LastName_Update__c.field-meta.xml
<CustomField>
    <fullName>PD_Avaliable_LastName_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PD_Avaliable_LastName_Update</label>
    <type>Checkbox</type>
</CustomField>