default/objects/Contact/fields/PD_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>PD_ExternalId__c</fullName>
    <label>PD_ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>