default/objects/Contact/fields/PESEL_Nr__c.field-meta.xml
<CustomField>
    <fullName>PESEL_Nr__c</fullName>
    <label>PESEL Nr.</label>
    <length>11</length>
    <type>Text</type>
</CustomField>