default/objects/Contact/fields/Phone_clean__c.field-meta.xml
<CustomField>
    <fullName>Phone_clean__c</fullName>
    <formula>IF(ISBLANK(Phone),'',SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone,'(',''), ')',''), ' ',''),  '-',''))&amp;' '&amp;
            IF(ISBLANK(MobilePhone),'',SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(MobilePhone,'(',''), ')',''), ' ',''),  '-',''))&amp;' '&amp;
            IF(ISBLANK(PPR_Contact_Phone__c),'',SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(PPR_Contact_Phone__c,'(',''), ')',''), ' ',''),  '-',''))</formula>
    <label>Phone clean</label>
    <type>Text</type>
</CustomField>