default/objects/Contact/fields/Portal_Admin__c.field-meta.xml
<CustomField>
    <fullName>Portal_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal-Admin</label>
    <type>Checkbox</type>
</CustomField>