default/objects/Contact/fields/Position_Funktion__c.field-meta.xml
<CustomField>
    <fullName>Position_Funktion__c</fullName>
    <label>Position/Funktion</label>
    <length>150</length>
    <type>Text</type>
</CustomField>