default/objects/Contact/fields/PPR_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>PPR_Contact_Phone__c</fullName>
    <label>PPR Contact Phone</label>
    <type>Phone</type>
</CustomField>