default/objects/Contact/fields/PPR_Contact_Phone_Status__c.field-meta.xml
<CustomField>
    <fullName>PPR_Contact_Phone_Status__c</fullName>
    <description>Status for the "PPR Contact Phone Status" field</description>
    <label>PPR Contact Phone Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneStatus</valueSetName>
    </valueSet>
</CustomField>