default/objects/Contact/fields/PPR_Contact_Phone_StatusModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>PPR_Contact_Phone_StatusModifiedDate__c</fullName>
    <description>Last Modified Date for PPR_Contact_Phone_Status__c field</description>
    <label>PPR Contact Phone Status Modified Date</label>
    <type>DateTime</type>
</CustomField>