default/objects/Contact/fields/PPR_Does_BDM_Use_Corp_Transport__c.field-meta.xml
<CustomField>
    <fullName>PPR_Does_BDM_Use_Corp_Transport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPR Does BDM Use Corp Transport</label>
    <type>Checkbox</type>
</CustomField>