default/objects/Contact/fields/PPR_Legacy_Contact_id__c.field-meta.xml
<CustomField>
    <fullName>PPR_Legacy_Contact_id__c</fullName>
    <label>PPR Legacy Contact id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>