default/objects/Contact/fields/Primaerer_ASP__c.field-meta.xml
<CustomField>
    <fullName>Primaerer_ASP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primärer ASP</label>
    <type>Checkbox</type>
</CustomField>