default/objects/Contact/fields/Reporting_Source_Cont__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Source_Cont__c</fullName>
    <description>A hidden field to mark source of the record for reporting purposes. Should not be updated/edited.</description>
    <label>Reporting Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>