default/objects/Contact/fields/Signed_on_behalf_of__c.field-meta.xml
<CustomField>
    <fullName>Signed_on_behalf_of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed on behalf of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>