default/objects/Contact/fields/Sprachpraeferenz__c.field-meta.xml
<CustomField>
    <fullName>Sprachpraeferenz__c</fullName>
    <label>Sprachpräferenz</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>französisch</fullName>
            </value>
            <value>
                <fullName>niederländisch</fullName>
            </value>
            <value>
                <fullName>deutsch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>