default/objects/Contact/fields/Sub_CustomerID__c.field-meta.xml
<CustomField>
    <fullName>Sub_CustomerID__c</fullName>
    <label>Sub_CustomerID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>