default/objects/Contact/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terminal</label>
    <referenceTo>Terminal__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>