default/objects/Contact/fields/Utm_url__c.field-meta.xml
<CustomField>
    <fullName>Utm_url__c</fullName>
    <label>Utm_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>