default/objects/Contact/fields/Versicherungspaket__c.field-meta.xml
<CustomField>
    <fullName>Versicherungspaket__c</fullName>
    <label>Versicherungspaket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silber-Standard</fullName>
                <default>true</default>
                <label>Silber-Standard</label>
            </value>
            <value>
                <fullName>Silber-Plus</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>