default/objects/Contact/recordTypes/AllStar.recordType-meta.xml
<RecordType>
    <fullName>AllStar</fullName>
    <active>true</active>
    <label>AllStar</label>
</RecordType>