default/objects/Contact/recordTypes/CCS_Contact_layout.recordType-meta.xml
<RecordType>
    <fullName>CCS_Contact_layout</fullName>
    <active>true</active>
    <label>CCS Contact layout</label>
</RecordType>