default/objects/Contact/recordTypes/Contact_layout.recordType-meta.xml
<RecordType>
    <fullName>Contact_layout</fullName>
    <active>true</active>
    <label>Contact layout</label>
</RecordType>