default/objects/Contact/recordTypes/Russian.recordType-meta.xml
<RecordType>
    <fullName>Russian</fullName>
    <active>true</active>
    <label>Russian</label>
</RecordType>