default/objects/Contact/recordTypes/Shell_Universal_Card.recordType-meta.xml
<RecordType>
    <fullName>Shell_Universal_Card</fullName>
    <active>true</active>
    <label>Shell Universal Card</label>
</RecordType>