default/objects/Contact/validationRules/Dont_Use_Standard_Create_Button.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_Use_Standard_Create_Button</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), RecordType.DeveloperName = 'Russian', OR($Profile.Name = 'Russian Sales Manager', $Profile.Name = 'Russian Team Leader', $Profile.Name = 'Russian Call Center', $Profile.Name = 'Russian Quality Control')
            ,PD_Avaliable_LastName_Update__c = false
            ,ConvertedFromLead__c = false
            )</errorConditionFormula>
    <errorMessage>Use new button for creating a record: "New Lead (New)".</errorMessage>
</ValidationRule>