default/objects/Contact/listViews/All_My_Contacts_Rus.listView-meta.xml
<ListView>
    <fullName>All_My_Contacts_Rus</fullName>
    <columns>Edit_Personal_Data__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Все Мои Контакты</label>
    <language>en_US</language>
    <sharedTo>
        <group>AllRussianRoles</group>
    </sharedTo>
</ListView>