default/objects/Contact/listViews/AllContacts_Rus.listView-meta.xml
<ListView>
    <fullName>AllContacts_Rus</fullName>
    <columns>Edit_Personal_Data__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Все Контакты</label>
    <language>en_US</language>
    <sharedTo>
        <group>AllRussianRoles</group>
    </sharedTo>
</ListView>