default/objects/Contact/listViews/Allstar_Mondo_Contacts.listView-meta.xml
<ListView>
    <fullName>Allstar_Mondo_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.AllStar</value>
    </filters>
    <label>Allstar Mondo Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <role>AllStar_Sales</role>
        <role>AllStar_Teamleader</role>
        <role>CCS_Administrator</role>
        <role>Data_Analyst</role>
        <role>Role_Up</role>
        <role>Salesmanager</role>
        <role>Salesmanager_2</role>
        <role>Teamleiter_Inbound_2</role>
        <role>Teamleiter_Outbound_5</role>
    </sharedTo>
</ListView>