default/objects/Contact/listViews/CCS_Contacts.listView-meta.xml
<ListView>
    <fullName>CCS_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CCS_GFN_number__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>equals</operation>
        <value>CZ</value>
    </filters>
    <label>CCS Contacts CZ</label>
    <language>en_US</language>
    <sharedTo>
        <role>CCS_Administrator</role>
        <role>CCS_CZ_Contact_Center</role>
        <role>CCS_CZ_SME</role>
        <role>CCS_SME_Team_Lead</role>
    </sharedTo>
</ListView>