default/objects/Contact/listViews/CCS_M_kontakty.listView-meta.xml
<ListView>
    <fullName>CCS_M_kontakty</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Position_Funktion__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Mine</filterScope>
    <label>CCS Mé kontakty</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>CCS_Administrator</roleAndSubordinates>
    </sharedTo>
</ListView>