default/objects/Contact/listViews/Contacts_CCS_Jandova.listView-meta.xml
<ListView>
    <fullName>Contacts_CCS_Jandova</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>hjand</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Contacts_CCS_Jandova</label>
    <language>en_US</language>
    <sharedTo>
        <role>CCS_Administrator</role>
    </sharedTo>
</ListView>