default/objects/Contact/listViews/MyTeam_Contacts_Rus.listView-meta.xml
<ListView>
    <fullName>MyTeam_Contacts_Rus</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Russian</value>
    </filters>
    <label>Моя группа</label>
    <language>en_US</language>
    <sharedTo>
        <role>PPR_Bryansk_Teamleader_PSO_1</role>
        <role>PPR_Bryansk_Teamleader_PSO_2</role>
        <role>PPR_Bryansk_Teamleader_Partner_1</role>
        <role>PPR_Bryansk_Teamleader_Partner_2</role>
        <role>PPR_Bryansk_Teamleader_Partner_3</role>
        <role>PPR_Field_Teamleader_Central</role>
        <role>PPR_Field_Teamleader_Moscow</role>
        <role>PPR_Field_Teamleader_Siberia_Ural_Regions</role>
        <role>PPR_Field_Teamleader_South</role>
        <role>PPR_KAM_Teamleader</role>
        <role>PPR_SME</role>
    </sharedTo>
</ListView>